simplified build, fix @Grab issue dues to Tika